<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.poojaelectronics.technician.viewModel.CompleteTaskViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEnterAmount"
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_amount"
                    android:paddingHorizontal="@dimen/margin_8dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietEnterAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1"
                        android:text="@={viewModel.completeTaskModel.amount}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_8dp"
                    android:text="@string/customer_rating" />

                <androidx.appcompat.widget.AppCompatRatingBar
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:numStars="5"
                    android:saveEnabled="true" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilRemarks"
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/remarks_optional"
                    android:paddingHorizontal="@dimen/margin_8dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietRemarks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:lines="3"
                        android:maxLines="3"
                        android:scrollbars="vertical"
                        android:text="@={viewModel.completeTaskModel.remarks}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_8dp"
                    android:text="@string/acknowledgement" />

                <com.github.gcacace.signaturepad.views.SignaturePad
                    android:id="@+id/signPad"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="@dimen/margin_10dp"
                    android:background="@color/light_grey"
                    app:penColor="@android:color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center"
                    android:padding="@dimen/margin_8dp"
                    android:weightSum="2">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnClear"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:background="#ffca28"
                        android:text="@string/clear" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnConfirm"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="@dimen/margin_8dp"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:text="@string/confirm"
                        android:visibility="gone" />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCompleteTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/complete_task" />

    </RelativeLayout>

</layout>